--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ button {
     padding: 0;
 }
 
-#listingsContainer div:nth-child(odd) {
+.ulcont > :nth-child(odd) {
     background-color: #fffcf2;
 }
 
@@ -89,7 +89,6 @@ button {
     height: 284px;
     /* top: 163px; */
     border: 0.25px, 0px, 0px, 0px;
-    background-color: #fffcf2;
 }
 .block2{
     padding: 20px;
@@ -99,7 +98,6 @@ button {
     height: 284px;
     /* top: 163px; */
     border: 0.25px, 0px, 0px, 0px;
-    background-color: #ffffff;
 }
 
 .left {
