--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
     font-family: 'Chivo', sans-serif;
     display: flex;
     justify-content: center;
+    background-color: #03d1d1
 }
 .title{
     font-size: 24px;
